add sam theme and main directory scaffolding

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,15 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "syd the banjo kid"
+
+[[params.mainMenu]]
+    link = '/'
+    text = 'who'
+
+[[params.mainMenu]]
+    link = '/posts'
+    text = 'posts'
+
+[[params.mainMenu]]
+    link = '/gallery'
+    text = 'gallery'
